# Trainer-Assist

./: .env.example  .env.production  .env.production.example  .gitignore  CLAUDE.md  Caddyfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/crates/api/: Cargo.toml
backend/crates/api/src/: config.rs  error.rs  main.rs  state.rs
backend/crates/api/src/routes/: mod.rs  moves.rs  pokemon.rs  teams.rs  types.rs
backend/crates/api/tests/: error_tests.rs
backend/crates/seed/: Cargo.toml
backend/crates/seed/src/: fetch.rs  lib.rs  load.rs  main.rs  parse.rs  transform.rs
backend/crates/seed/tests/: parse_tests.rs  transform_tests.rs
backend/crates/shared/src/: lib.rs  models.rs  redis_keys.rs
backend/crates/shared/tests/: models_tests.rs  redis_keys_tests.rs
data/: nicknames.json
docs/: vgc-competition-data.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/moves/: page.tsx
frontend/src/app/pokemon/: page.tsx
frontend/src/app/team-builder/: page.tsx
frontend/src/app/types/: page.tsx
frontend/src/components/: ErrorMessage.tsx  Footer.tsx  LanguageSwitcher.tsx  LoadingSpinner.tsx  MobileNav.tsx  PokemonCard.tsx  SearchInput.tsx  StatBar.tsx  ThemeSwitcher.tsx  TypeBadge.tsx  TypeIcon.tsx  TypeKeypad.tsx  WikiLink.tsx
frontend/src/components/__tests__/: StatBar.test.tsx
frontend/src/hooks/: use-team.ts
frontend/src/lib/: api.ts  format.ts  search.ts  team-store.ts  type-colors.ts  types.ts  wiki.ts
(+13 files in other folders)
