[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
csv = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
futures = "0.3"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
